syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";

package ride.notification.v1alpha1;

option go_package = "github.com/ride-app/notification-service/api/ride/notification/v1alpha1";

service NotificationService {

  rpc GetNotificationToken (GetNotificationTokenRequest) returns (GetNotificationTokenResponse) {
    option (google.api.http) = {
    get: "/v1alpha1/{name=users/*/token}"
    };
  };

  rpc UpdateNotificationToken (UpdateNotificationTokenRequest) returns (UpdateNotificationTokenResponse) {
    option (google.api.http) = {
    patch: "/v1alpha1/{name=users/*/token}"
      body: "*"
    };
  };
}

message GetNotificationTokenRequest {
  // Relative resource name of the notification token. Example: users/123/token
  string name = 1 [(buf.validate.field).string.pattern = "^users/[A-Za-z0-9_-]+/token$"];
}

message GetNotificationTokenResponse {
  // Notification token of the user.
  string token = 1;
}

message UpdateNotificationTokenRequest {
  // Relative resource name of the notification token. Example: users/123/token
  string name = 1 [(buf.validate.field).string.pattern = "^users/[A-Za-z0-9_-]+/token$"];

  // Notification token of the user.
  string token = 2;
}

message UpdateNotificationTokenResponse {}